// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rose 1`] = `
{
  "annotation": {},
  "chartType": "rose",
  "config": {
    "rose": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "rose": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2019-Jan-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2019-Jan-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 210000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      "month": "Jan",
      "profit": 210000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2019-Jan-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 210000,
        "sales": 200000,
        "year": "2019",
      },
      "discount": undefined,
      "month": "Jan",
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2019-Feb-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2019-Feb-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 220000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      "month": "Feb",
      "profit": 220000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2019-Feb-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 220000,
        "sales": 400000,
        "year": "2019",
      },
      "discount": undefined,
      "month": "Feb",
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2019-Mar-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2019-Mar-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 230000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      "month": "Mar",
      "profit": 230000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2019-Mar-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 230000,
        "sales": 600000,
        "year": "2019",
      },
      "discount": undefined,
      "month": "Mar",
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2019-Apr-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2019-Apr-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 340000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      "month": "Apr",
      "profit": 340000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2019-Apr-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 340000,
        "sales": 800000,
        "year": "2019",
      },
      "discount": undefined,
      "month": "Apr",
      "year": "2019",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2019-May-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2019-May-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 450000,
      "__OriginalData__": {
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      "month": "May",
      "profit": 450000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2019-May-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "May",
        "profit": 450000,
        "sales": 1000000,
        "year": "2019",
      },
      "discount": undefined,
      "month": "May",
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2019-Jun-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2019-Jun-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 560000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      "month": "Jun",
      "profit": 560000,
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2019-Jun-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 560000,
        "sales": 1200000,
        "year": "2019",
      },
      "discount": undefined,
      "month": "Jun",
      "year": "2019",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2020-Jan-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 200000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "sales": 200000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2020-Jan-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 110000,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      "month": "Jan",
      "profit": 110000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jan",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2020-Jan-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Jan",
        "profit": 110000,
        "sales": 200000,
        "year": "2020",
      },
      "discount": undefined,
      "month": "Jan",
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2020-Feb-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 400000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "sales": 400000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2020-Feb-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 320000,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      "month": "Feb",
      "profit": 320000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Feb",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2020-Feb-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Feb",
        "profit": 320000,
        "sales": 400000,
        "year": "2020",
      },
      "discount": undefined,
      "month": "Feb",
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2020-Mar-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 600000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "sales": 600000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2020-Mar-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 430000,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      "month": "Mar",
      "profit": 430000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Mar",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2020-Mar-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Mar",
        "profit": 430000,
        "sales": 600000,
        "year": "2020",
      },
      "discount": undefined,
      "month": "Mar",
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2020-Apr-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 800000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "sales": 800000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2020-Apr-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 540000,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      "month": "Apr",
      "profit": 540000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Apr",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2020-Apr-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Apr",
        "profit": 540000,
        "sales": 800000,
        "year": "2020",
      },
      "discount": undefined,
      "month": "Apr",
      "year": "2020",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2020-May-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1000000,
      "__OriginalData__": {
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "sales": 1000000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2020-May-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 250000,
      "__OriginalData__": {
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      "month": "May",
      "profit": 250000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "May",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2020-May-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "May",
        "profit": 250000,
        "sales": 1000000,
        "year": "2020",
      },
      "discount": undefined,
      "month": "May",
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "Sales-sales",
      "__Dim_Color__": "Sales",
      "__Dim_Detail__": "2020-Jun-Sales",
      "__MeaId__": "sales",
      "__MeaName__": "Sales",
      "__MeaValue__": 1200000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "sales": 1200000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "Profit-profit",
      "__Dim_Color__": "Profit",
      "__Dim_Detail__": "2020-Jun-Profit",
      "__MeaId__": "profit",
      "__MeaName__": "Profit",
      "__MeaValue__": 610000,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
      "month": "Jun",
      "profit": 610000,
      "year": "2020",
    },
    {
      "__Dim_Angle__": "Jun",
      "__Dim_ColorId__": "Discount-discount",
      "__Dim_Color__": "Discount",
      "__Dim_Detail__": "2020-Jun-Discount",
      "__MeaId__": "discount",
      "__MeaName__": "Discount",
      "__MeaValue__": undefined,
      "__OriginalData__": {
        "month": "Jun",
        "profit": 610000,
        "sales": 1200000,
        "year": "2020",
      },
      "discount": undefined,
      "month": "Jun",
      "year": "2020",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "discount": "Discount",
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          NaN,
          NaN,
        ],
        "measureValue": "__MeaValue__",
      },
      "id": "rose",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "Discount-discount": "Discount",
          "Profit-profit": "Profit",
          "Sales-sales": "Sales",
        },
        "colorItems": [
          "Sales-sales",
          "Profit-profit",
          "Discount-discount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "month",
    ],
    "color": [
      "__MeaName__",
    ],
    "detail": [
      "month",
      "__MeaName__",
      "year",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "Sales",
      "autoFormat": true,
      "id": "sales",
    },
    {
      "alias": "Profit",
      "autoFormat": true,
      "id": "profit",
    },
    {
      "alias": "Discount",
      "autoFormat": true,
      "id": "discount",
    },
  ],
}
`;

exports[`rose 2`] = `
{
  "angleField": "__Dim_Angle__",
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "label": {
        "visible": true,
      },
      "nice": true,
      "orient": "radius",
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
    {
      "domainLine": {
        "visible": true,
      },
      "grid": {
        "visible": true,
      },
      "nice": true,
      "orient": "angle",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "tick": {
        "visible": true,
      },
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "color": {
    "domain": [
      "Sales-sales",
      "Profit-profit",
      "Discount-discount",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "rose",
    "values": [
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2019-Jan-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2019-Jan-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 210000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2019-Jan-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "discount": undefined,
        "month": "Jan",
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2019-Feb-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2019-Feb-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 220000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2019-Feb-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "discount": undefined,
        "month": "Feb",
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2019-Mar-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2019-Mar-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 230000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2019-Mar-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "discount": undefined,
        "month": "Mar",
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2019-Apr-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2019-Apr-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 340000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2019-Apr-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "discount": undefined,
        "month": "Apr",
        "year": "2019",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2019-May-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2019-May-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 450000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2019-May-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "discount": undefined,
        "month": "May",
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2019-Jun-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2019-Jun-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 560000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2019-Jun-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "discount": undefined,
        "month": "Jun",
        "year": "2019",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2020-Jan-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2020-Jan-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 110000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jan",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2020-Jan-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "discount": undefined,
        "month": "Jan",
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2020-Feb-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2020-Feb-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 320000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Feb",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2020-Feb-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "discount": undefined,
        "month": "Feb",
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2020-Mar-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2020-Mar-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 430000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Mar",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2020-Mar-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "discount": undefined,
        "month": "Mar",
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2020-Apr-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2020-Apr-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 540000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Apr",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2020-Apr-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "discount": undefined,
        "month": "Apr",
        "year": "2020",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2020-May-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2020-May-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 250000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "May",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2020-May-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "discount": undefined,
        "month": "May",
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "Sales-sales",
        "__Dim_Color__": "Sales",
        "__Dim_Detail__": "2020-Jun-Sales",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "Profit-profit",
        "__Dim_Color__": "Profit",
        "__Dim_Detail__": "2020-Jun-Profit",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__": 610000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "year": "2020",
      },
      {
        "__Dim_Angle__": "Jun",
        "__Dim_ColorId__": "Discount-discount",
        "__Dim_Color__": "Discount",
        "__Dim_Detail__": "2020-Jun-Discount",
        "__MeaId__": "discount",
        "__MeaName__": "Discount",
        "__MeaValue__": undefined,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "discount": undefined,
        "month": "Jun",
        "year": "2020",
      },
    ],
  },
  "innerRadius": 0,
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.9,
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "rose": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
        "lineWidth": 1,
      },
    },
    "style": {
      "lineWidth": 1,
      "stroke": "#ffffff",
    },
  },
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [Function],
  "stackInverse": true,
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "rose",
  "valueField": "__MeaValue__",
}
`;
